--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <section class="card" id="javascript-section">
         <h2>JS</h2>
           <ul>
-            <li>I am in a rush, my apologies.</li>
-            <li>I am in a rush, my apologies.</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
             <li>I am in a rush, my apologies.</li>
             <li>I am in a rush, my apologies.</li>
           </ul>   
